[package]
name = "util_rs"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]

[dependencies]
runtime-fmt = "*"
exonum_sodiumoxide = "0.0.16"
byteorder = "1.1.0"
chrono = { version = "0.4.0", features = ["serde"] }
uuid = { version = "0.6.0", features = ["serde"] }
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
