[package]
name = "kvstore"
version = "0.1.0"
authors = ["Rg <Rg@DESKTOP-6E9RNIT>"]

[dependencies]
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
failure = "0.1.1"
exonum_rocksdb = "0.7.2"
hex = { git = "https://github.com/KokaKiwi/rust-hex.git"}
sha3 = "0.7.3"
byteorder = "1.1.0"
chrono = { version = "0.4.0", features = ["serde"] }
uuid = { version = "0.6.0", features = ["serde"] }